manifests/02-deployment-ibm-cloud-managed.yaml
# WARNING: DO NOT EDIT, generated by hack/update-profile-manifests.sh
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    capability.openshift.io/name: Ingress
    config.openshift.io/inject-proxy: ingress-operator
    include.release.openshift.io/ibm-cloud-managed: "true"
  name: ingress-operator
  namespace: openshift-ingress-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ingress-operator
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        openshift.io/required-scc: restricted-v2
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
      labels:
        name: ingress-operator
    spec:
      containers:
      - command:
        - ingress-operator
        - start
        - --namespace
        - $(WATCH_NAMESPACE)
        - --image
        - $(IMAGE)
        - --haproxy-image
        - 2.8=$(HAPROXY_28_IMAGE)
        - --haproxy-image
        - 3.2=$(HAPROXY_32_IMAGE)
        - --default-haproxy-version
        - $(DEFAULT_HAPROXY_VERSION)
        - --deprecated-haproxy-version
        - $(DEPRECATED_HAPROXY_VERSION)
        - --canary-image
        - $(CANARY_IMAGE)
        - --release-version
        - $(RELEASE_VERSION)
        - --gateway-api-operator-catalog
        - $(GATEWAY_API_OPERATOR_CATALOG)
        - --gateway-api-operator-channel
        - $(GATEWAY_API_OPERATOR_CHANNEL)
        - --gateway-api-operator-version
        - $(GATEWAY_API_OPERATOR_VERSION)
        - --istio-version
        - $(ISTIO_VERSION)
        - --metrics-bind-addr
        - :9393
        - --metrics-cert-dir
        - /etc/tls/metrics
        image: openshift/origin-cluster-ingress-operator:latest
        imagePullPolicy: IfNotPresent
        name: ingress-operator
        ports:
        - containerPort: 9393
          name: metrics
        resources:
          requests:
            cpu: 10m
            memory: 56Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /etc/pki/ca-trust/extracted/pem
          name: trusted-ca
          readOnly: true
        - mountPath: /var/run/secrets/openshift/serviceaccount
          name: bound-sa-token
          readOnly: true
        - mountPath: /etc/tls/metrics
          name: metrics-tls
          readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: system-cluster-critical
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: ingress-operator
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 120
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 120
      volumes:
      - name: metrics-tls
        secret:
          secretName: metrics-tls
      - configMap:
          items:
          - key: ca-bundle.crt
            path: tls-ca-bundle.pem
          name: trusted-ca
        name: trusted-ca
      - name: bound-sa-token
        projected:
          sources:
          - serviceAccountToken:
              audience: openshift
              path: token
