manifests/01-validating-admission-policy-ibm-cloud-managed.yaml
# https://issues.redhat.com/browse/CNTRLPLANE-710 tracks the HyperShift
# assessment of validity of the pod bound admission rule, which
# was removed for this VAP (unlike HA/SNO).
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: openshift-ingress-operator-gatewayapi-crd-admission
  annotations:
    capability.openshift.io/name: Ingress
    include.release.openshift.io/ibm-cloud-managed: "true"
    release.openshift.io/feature-gate: "-GatewayAPIManagementMode"
spec:
  matchConstraints:
    # Consider only requests to CRD resources.
    resourceRules:
    - apiGroups:   ["apiextensions.k8s.io"]
      apiVersions: ["v1"]
      operations:  ["CREATE","UPDATE","DELETE"]
      resources:   ["customresourcedefinitions"]
  matchConditions:
    # Consider only request to Gateway API CRDs.
    - name: "check-only-gateway-api-crds"
      # When the operation is DELETE, the "object" variable is null.
      expression: "(request.operation == 'DELETE' ? oldObject : object).spec.group == 'gateway.networking.k8s.io'"
  # Validations are evaluated in the the order of their declaration.
  validations:
    # Verify that the request was sent by the ingress operator's service account.
    - expression: "has(request.userInfo.username) && (request.userInfo.username == 'system:serviceaccount:openshift-ingress-operator:ingress-operator')"
      message: "Gateway API Custom Resource Definitions are managed by the Ingress Operator and may not be modified"
      reason: Forbidden
  # Fail the admission if any validation evaluates to false.
  failurePolicy: Fail
